--- a/customer-service.html
+++ b/customer-service.html
@@ -1471,6 +1471,12 @@
     <header class="header">
         <div class="container">
             <div class="navbar">
+                <div class="navbar-brand">
+                    <a href="home.html" class="logo-link">
+                        <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
+                    </a>
+                </div>
+                
                 <nav class="nav-menu">
                     <a href="home.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About Dimple</a>
