--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -1550,8 +1550,8 @@
     <header class="header">
         <div class="container">
             <div class="navbar">
-                <div class="logo-section">
-                    <a href="home.html" class="logo">
+                <div class="navbar-brand">
+                    <a href="home.html" class="logo-link">
                         <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
                     </a>
                 </div>
@@ -1571,7 +1571,7 @@
                     <a href="formula1.html" class="nav-link">Formula 1</a>
                     <a href="pricing.html" class="nav-link">Pricing</a>
                     <a href="customer-service.html" class="nav-link">Customer Service</a>
-                                <a href="brochures.html" class="nav-link">Brochures</a>
+                    <a href="brochures.html" class="nav-link">Brochures</a>
                     <a href="customer-service.html#contact" class="nav-contact-button">Contact</a>
                 </nav>
                 
@@ -2004,7 +2004,7 @@
                         <h4>Get In Touch</h4>
                         <div class="contact-info">
                             <a href="mailto:info@dimple.nl" class="contact-link">info@dimple.nl</a>
-                            <a href="tel:+31123456789" class="contact-link">+31 12 345 6789</a>
+                            <a href="tel:+31251316302" class="contact-link">+31 251 316 302</a>
                             <span class="contact-address">Schieland 18, 1948 RM Beverwijk</span>
                             <span class="contact-location">Netherlands</span>
                         </div>
