--- a/manual-wiping.html
+++ b/manual-wiping.html
@@ -1275,8 +1275,8 @@
     <header class="header">
         <div class="container">
             <div class="navbar">
-                <div class="header-logo">
-                    <a href="home.html">
+                <div class="navbar-brand">
+                    <a href="home.html" class="logo-link">
                         <img src="images/logo-wit@2x.png" alt="Dimple Logo" class="logo-image">
                     </a>
                 </div>
@@ -1644,7 +1644,7 @@
                         <h4>Get In Touch</h4>
                         <div class="contact-info">
                             <a href="mailto:info@dimple.nl" class="contact-link">info@dimple.nl</a>
-                            <a href="tel:+31123456789" class="contact-link">+31 12 345 6789</a>
+                            <a href="tel:+31251316302" class="contact-link">+31 251 316 302</a>
                             <span class="contact-address">Schieland 18, 1948 RM Beverwijk</span>
                             <span class="contact-location">Netherlands</span>
                         </div>
