--- a/brochures.html
+++ b/brochures.html
@@ -184,7 +184,6 @@
             top: 0 !important;
             left: 0 !important;
             right: 0 !important;
-            background: rgba(26, 95, 63, 0.98) !important;
             z-index: 10000 !important;
             display: block !important;
             visibility: visible !important;
@@ -680,7 +679,7 @@
             display: block !important;
             opacity: 1 !important;
             visibility: visible !important;
-            height: clamp(40px, 4vw, 48px) !important;
+            height: 45px !important;
             width: auto !important;
             filter: brightness(0) invert(1) !important;
             position: relative !important;
@@ -771,17 +770,17 @@
             <div class="about-hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        <span class="title-line">About</span>
-                        <span class="title-main">Dimple</span>
-                        <span class="title-subtitle">Three Decades of Innovation & Excellence</span>
+                        <span class="title-line">Product</span>
+                        <span class="title-main">Brochures</span>
+                        <span class="title-subtitle">Technical Specifications & Information</span>
                     </h1>
                     
                     <p class="hero-description">
-                        Founded in 1991 by Ge Limmen, Dimple has evolved from a local startup to a market leader in non-woven fabrics. Our commitment to innovation, quality, and customer service has made us the trusted choice for professionals across Europe and beyond.
+                        Access comprehensive product brochures and technical documentation for our complete range of industrial cleaning solutions. Download detailed specifications, features, and application guides for all our products.
                     </p>
                     
                     <div class="hero-cta">
-                        <button class="cta-secondary" data-action="scroll-to-story">
+                        <button class="cta-secondary" data-action="scroll-to-brochures">
                             <span class="cta-text">Explore</span>
                             <span class="cta-icon">↓</span>
                         </button>
