--- a/winding-device.html
+++ b/winding-device.html
@@ -1459,7 +1459,7 @@
             <div class="mobile-menu-dropdown">
                 <button class="mobile-menu-dropdown-toggle active" id="graphicalCleaningToggle">
                     <span>Graphical Cleaning</span>
-                    <span class="mobile-menu-dropdown-arrow">▼</span>
+                    <span class="mobile-menu-dropdown-arrow" id="graphicalCleaningArrow">▼</span>
                 </button>
                 <div class="mobile-menu-submenu active" id="graphicalCleaningSubmenu">
                     <a href="graphical-cleaning.html" class="mobile-menu-sublink">Graphical Cleaning</a>
