--- a/customer-service.html
+++ b/customer-service.html
@@ -1548,7 +1548,7 @@
                             <span class="cta-text">Contact Us</span>
                             <span class="cta-icon">↓</span>
                         </a>
-                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
                             <span class="cta-text">Watch Our Video</span>
                             <span class="cta-icon">▶</span>
                         </a>
