--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* About page specific styles - matching index.html exactly */
+        /* About page specific styles */
         
         /* ENHANCED ABOUT HERO SECTION - Mobile optimized with HSR1700 background */
         .about-hero {
@@ -712,7 +712,7 @@
                             <span class="cta-text">Explore</span>
                             <span class="cta-icon">↓</span>
                         </button>
-                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
                             <span class="cta-text">Watch Our Video</span>
                             <span class="cta-icon">▶</span>
                         </a>
