--- a/winding-device.html
+++ b/winding-device.html
@@ -1502,7 +1502,7 @@
                             <span class="cta-text">Explore Solutions</span>
                             <span class="cta-icon">↓</span>
                         </button>
-                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
                             <span class="cta-text">Watch Our Video</span>
                             <span class="cta-icon">▶</span>
                         </a>
@@ -1620,7 +1620,7 @@
         </div>
     </section>
 
-    <!-- Our Machines Section (copied from index.html) -->
+    <!-- Our Machines Section -->
     <section class="machines-section" id="machines">
         <div class="machines-background">
             <div class="machines-grid-pattern"></div>
@@ -1745,7 +1745,7 @@
         </div>
     </section>
 
-    <!-- Footer (copied from index.html) -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="footer-background">
             <div class="footer-grid-pattern"></div>
