--- a/formula1.html
+++ b/formula1.html
@@ -1448,7 +1448,7 @@
                             <span class="cta-text">Explore</span>
                             <span class="cta-icon">↓</span>
                         </button>
-                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
                             <span class="cta-text">Watch Our Video</span>
                             <span class="cta-icon">▶</span>
                         </a>
