--- a/customer-service.html
+++ b/customer-service.html
@@ -1548,8 +1548,8 @@
                             <span class="cta-text">Contact Us</span>
                             <span class="cta-icon">↓</span>
                         </a>
-                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
-                            <span class="cta-text">Watch Our Video</span>
+                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                            <span class="cta-text">Dimple animated</span>
                             <span class="cta-icon">▶</span>
                         </a>
                     </div>
