--- a/cassette-rolls.html
+++ b/cassette-rolls.html
@@ -1152,8 +1152,8 @@
                             <span class="cta-text">Explore Solutions</span>
                             <span class="cta-icon">↓</span>
                         </button>
-                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
-                            <span class="cta-text">Watch Our Video</span>
+                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                            <span class="cta-text">Dimple animated</span>
                             <span class="cta-icon">▶</span>
                         </a>
                     </div>
