--- a/formula1.html
+++ b/formula1.html
@@ -1448,8 +1448,8 @@
                             <span class="cta-text">Explore</span>
                             <span class="cta-icon">↓</span>
                         </button>
-                        <a href="home.html" class="cta-button cta-primary video-cta-btn">
-                            <span class="cta-text">Watch Our Video</span>
+                        <a href="index.html" class="cta-button cta-primary video-cta-btn">
+                            <span class="cta-text">Dimple animated</span>
                             <span class="cta-icon">▶</span>
                         </a>
                     </div>
