--- a/index.html
+++ b/index.html
@@ -271,10 +271,75 @@
             to { opacity: 0.9; }
         }
 
-        /* Hide logo watermark on desktop (768px and above) */
-        @media (min-width: 768px) {
-            .logo-watermark {
-                display: none !important;
+        /* Logo watermark visible on all screen sizes */
+
+        /* Calendly Modal Styles */
+        .calendly-modal {
+            display: none;
+            position: fixed;
+            z-index: 10000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(10px);
+            animation: fadeIn 0.3s ease;
+            overflow-y: auto;
+        }
+
+        .calendly-modal.active {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .calendly-modal-content {
+            position: relative;
+            background: white;
+            border-radius: 16px;
+            max-width: 1000px;
+            width: 100%;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.5);
+            animation: slideUp 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            overflow: hidden;
+        }
+
+        .calendly-close-btn {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            z-index: 10001;
+            background: var(--primary-green);
+            color: white;
+            border: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            font-size: 28px;
+            line-height: 1;
+            cursor: pointer;
+            transition: all var(--transition-fast);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .calendly-close-btn:hover {
+            background: var(--accent-green);
+            transform: rotate(90deg) scale(1.1);
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px) scale(0.9);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
             }
         }
 
@@ -317,6 +382,29 @@
 
             .logo-watermark img {
                 height: 32px;
+            }
+
+            /* Calendly Modal Mobile Styles */
+            .calendly-modal.active {
+                padding: 10px;
+            }
+
+            .calendly-modal-content {
+                border-radius: 12px;
+                max-height: 90vh;
+            }
+
+            .calendly-inline-widget {
+                height: 600px !important;
+                min-height: 600px;
+            }
+
+            .calendly-close-btn {
+                width: 36px;
+                height: 36px;
+                font-size: 24px;
+                top: 10px;
+                right: 10px;
             }
         }
 
@@ -448,9 +536,9 @@
 
         <!-- Action Buttons -->
         <div class="action-buttons">
-            <a href="mailto:info@dimple.nl?subject=CEO%20Call%20Request&body=Hello,%20I%20would%20like%20to%20schedule%20a%20call%20with%20the%20CEO%20to%20discuss%20Dimple's%20solutions." class="btn btn-primary">
+            <button id="bookCallBtn" class="btn btn-primary">
                 <span>Book a Call with CEO</span>
-            </a>
+            </button>
             <a href="home.html" class="btn btn-secondary">
                 <span>Explore Dimple</span>
                 <span class="btn-icon">→</span>
@@ -458,19 +546,20 @@
         </div>
     </div>
 
+    <!-- Calendly Modal -->
+    <div id="calendlyModal" class="calendly-modal">
+        <div class="calendly-modal-content">
+            <button class="calendly-close-btn" id="closeCalendly">&times;</button>
+            <div class="calendly-inline-widget" data-url="https://calendly.com/gelimmen-meeting/30min" style="min-width:320px;height:550px;"></div>
+        </div>
+    </div>
+
+    <!-- Calendly script -->
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
     <script>
         // Enhanced video interaction
         const video = document.getElementById('welcomeVideo');
-        
-        // Auto-play on user interaction (respects browser autoplay policies)
-        document.addEventListener('click', function playOnce() {
-            if (video.paused) {
-                video.play().catch(e => {
-                    console.log('Autoplay prevented:', e);
-                });
-            }
-            document.removeEventListener('click', playOnce);
-        }, { once: true });
 
         // Track video engagement (optional analytics)
         video.addEventListener('play', function() {
@@ -494,6 +583,39 @@
                     });
                 }
             });
+        });
+
+        // Calendly Modal Functionality
+        const calendlyModal = document.getElementById('calendlyModal');
+        const bookCallBtn = document.getElementById('bookCallBtn');
+        const closeCalendlyBtn = document.getElementById('closeCalendly');
+
+        // Open modal when "Book a Call with CEO" button is clicked
+        bookCallBtn.addEventListener('click', function() {
+            calendlyModal.classList.add('active');
+            document.body.style.overflow = 'hidden'; // Prevent background scrolling
+        });
+
+        // Close modal when close button is clicked
+        closeCalendlyBtn.addEventListener('click', function() {
+            calendlyModal.classList.remove('active');
+            document.body.style.overflow = 'auto'; // Restore scrolling
+        });
+
+        // Close modal when clicking outside the modal content
+        calendlyModal.addEventListener('click', function(e) {
+            if (e.target === calendlyModal) {
+                calendlyModal.classList.remove('active');
+                document.body.style.overflow = 'auto';
+            }
+        });
+
+        // Close modal with Escape key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape' && calendlyModal.classList.contains('active')) {
+                calendlyModal.classList.remove('active');
+                document.body.style.overflow = 'auto';
+            }
         });
     </script>
 </body>
