--- a/home.html
+++ b/home.html
@@ -273,8 +273,8 @@
                             <span class="cta-icon">↓</span>
                         </button>
                         <a href="index.html" class="cta-button cta-primary video-cta-btn">
-                            <span class="cta-text">Dimple animated</span>
-                            <span class="cta-icon">▶</span>
+                            <span class="cta-text">Back to Home Page</span>
+                            <span class="cta-icon">→</span>
                         </a>
                     </div>
                 </div>
